test/typePairError2.slq
def foo():(ğ”¹,â„•){} /// error
